Updated the headers

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -12,6 +12,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+ /* Copyright 2021 Microsoft
+ * This file has been modified by Microsoft to add support for document
+ * presentation in Microsoft Dynamics 365 - Finance & Operations web client.
+ */
 
 @import url(pdf_viewer.css);
 
